--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+  <head>
+    <link rel="stylesheet" href="assets/css/style.css">
+  </head>
   <body>
     <h1>Hello, world!</h1>
   </body>
